# cuda-test

./: CMakeLists.txt
src/: matrix_add.cu  matrix_mul_d.cu  matrix_mul_h.c  vec_add.c  vec_add.cu
